Fixed padding alignment, removed commented out CSS

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,7 +25,8 @@ body, html {
 
 .sidebar {
 	border-right: 1px solid gray;
-	padding: 2.2rem !important;
+	padding: 3rem !important;
+	padding-top: 2rem !important;
 }
 
 .profile-img {
@@ -51,8 +52,8 @@ body, html {
 }
 
 .main {
-	/*outline: 1px solid gray;*/
 	padding: 3rem !important;
+	padding-top: 2rem !important;
 	height: 95.8rem;
 }
 
